--- a/assets/scss/components/responsive.scss
+++ b/assets/scss/components/responsive.scss
@@ -15,6 +15,13 @@
   .yatri-mobile-menu {
     display: block;
   }
+  .yatri-bottom-footer-area {
+    .yatri-section-container {
+      .yatri-section-menu {
+        display: block;
+      }
+    }
+  }
 
   .top-header, .yatri-mid-header, .bottom-header {
 
